# Feature-Preserving-Octree-Hex-Meshing

./: CMakeLists.txt  LICENSE  README.md  aabb.h  global_functions.cpp  global_functions.h  global_types.cpp  global_types.h  io.cpp  io.h  main.cpp  meshing.cpp  meshing.h  metro_hausdorff.cpp  metro_hausdorff.h  optimization.cpp  optimization.h  slim_m.cpp  slim_m.h  timer.h
cmake/: FindSuiteSparse.cmake
grid_meshing/: attributes.h  common.h  grid_hex_meshing.cpp  grid_hex_meshing.h  octree.cpp  octree.h  voxelization.cpp  voxelization.h
